--- a/servicios.html
+++ b/servicios.html
@@ -63,7 +63,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="../img/servicios-img/servicio-1.jpeg" alt="Asesoría e Implementación de Plantas Cerveceras">
+                        <img src="img/servicios-img/servicio-1.jpeg" alt="Asesoría e Implementación de Plantas Cerveceras">
                     </div>
                     <div class="ser-title">
                         <h2>Asesoría e Implementación de Plantas</h2>
@@ -79,7 +79,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="../img/servicios-img/servicio-2.jpg" alt="Instalación de Barras de Cerveza">
+                        <img src="img/servicios-img/servicio-2.jpg" alt="Instalación de Barras de Cerveza">
                     </div>
                     <div class="ser-title">
                         <h2>Instalación de Barras de Cerveza</h2>
@@ -95,7 +95,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="../img/servicios-img/servicio-3.jpeg" alt="Cerveza para Eventos en Botellas o Barril">
+                        <img src="img/servicios-img/servicio-3.jpg" alt="Cerveza para Eventos en Botellas o Barril">
                     </div>
                     <div class="ser-title">
                         <h2>Cerveza para Eventos en Botellas o Barril</h2>
@@ -111,7 +111,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="../img/servicios-img/servicio-4.jpg" alt="Maquila y Marca Blanca">
+                        <img src="img/servicios-img/servicio-4.jpg" alt="Maquila y Marca Blanca">
                     </div>
                     <div class="ser-title">
                         <h2>Maquila y Marca Blanca</h2>
@@ -128,7 +128,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="../img/servicios-img/servicio-5.jpeg" alt="Cursos y Capacitaciones">
+                        <img src="img/servicios-img/servicio-5.jpg" alt="Cursos y Capacitaciones">
                     </div>
                     <div class="ser-title">
                         <h2>Cursos y Capacitaciones</h2>
@@ -229,7 +229,7 @@
                     <h2>Empresa</h2>
                     <div class="flex flex-2 gap-footer-3">
                         <a href="nosotros.html">Nosotros</a>
-                        <a href="">Taproom</a>
+                        <a href="taproom.html">Taproom</a>
                     </div>
                 </div>
                 <div class="flex flex-2">
