--- a/nosotros.html
+++ b/nosotros.html
@@ -259,7 +259,7 @@
                     <h2>Empresa</h2>
                     <div class="flex flex-2 gap-footer-3">
                         <a href="#nosotros">Nosotros</a>
-                        <a href="">Taproom</a>
+                        <a href="taproom.html">Taproom</a>
                     </div>
                 </div>
                 <div class="flex flex-2">
