--- a/index.html
+++ b/index.html
@@ -57,26 +57,24 @@
 
     <main class="container" id="qerochela">
         <section class="banner">
-            <div class="banner-img">
-                <img src="img/Banner.png" alt="Banner">
-            </div>
+            <img src="img/inicio-img/Banner.jpeg" alt="Banner">
         </section>
         <section class="categorias center">
             <article class="grid cat-column-2">
                 <div class="item-img">
                     <a href="producto/qerochela.html">
-                        <img src="img/Publicidad1.png" alt="Publicidad 1">
+                        <img src="img/inicio-img/Publicidad1.jpeg" alt="Publicidad 1">
                     </a>
                 </div>
                 <div class="grid cat-subcolumn-2">
                     <div class="item-img2">
                         <a href="https://tantrica.pe/" target="_blank">
-                            <img src="img/Publicidad2.png" alt="Publicidad 2">
+                            <img src="img/inicio-img/Publicidad2.jpeg" alt="Publicidad 2">
                         </a>
                     </div>
                     <div class="item-img2">
                         <a href="producto/qerochela-luna-miel.html">
-                            <img src="img/Publicidad3.png" alt="Publicidad 3">
+                            <img src="img/inicio-img/Publicidad3.jpeg" alt="Publicidad 3">
                         </a>
                     </div>
                 </div>
@@ -88,64 +86,67 @@
                     <h2 class="title-section">nuestros productos</h2>
                 </div>
                 <div class="center">
-                    <p class="text-section">Cerveza artesanal con identidad. Sabor que cuenta una historia.</p>
+                    <p class="text-section center-align">Cerveza artesanal con identidad. Sabor que cuenta una historia.</p>
                 </div>
             </section>
             <div class="grid productos-column-3 center">
                 <div class="center">
-                    <div class="grid item-producto center">
-                        <div class="img-producto center">
-                            <a href="producto/qerochela.html">
-                                <img src="img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
-                            </a>
-                            <span class="precio center">S/.</span>
+                    <div class="item-producto">
+                        <div class="my-item grid gap1-3rem">
+                            <div class="img-producto center">
+                                <a href="producto/qerochela.html">
+                                    <img src="img/inicio-img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
+                                </a>
+                            </div>
+                            <div class="text-producto center">
+                                <p>aborigen</p>
+                            </div>
+                            <div class="description center">
+                                <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
+                            </div>
+                            <div class="button-producto center">
+                                <button onclick="location.href='producto/qerochela.html'">ordenar ahora</button>
+                            </div>
                         </div>
-                        <div class="text-producto center">
-                            <p>aborigen</p>
-                        </div>
-                        <div class="description center">
-                            <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
-                        </div>
-                        <div class="button-producto center">
-                            <button onclick="location.href='producto/qerochela.html'">ordenar ahora</button>
+                    </div>
+                </div>
+                <div class="center">
+                    <div class="item-producto">
+                        <div class="my-item grid gap1-3rem">
+                            <div class="img-producto center">
+                                <a href="https://tantrica.pe/">
+                                    <img src="img/inicio-img/Tantrica.png" alt="Tantrica">
+                                </a>
+                            </div>
+                            <div class="text-producto center">
+                                <p>tántrica</p>
+                            </div>
+                            <div class="description center">
+                                <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
+                            </div>
+                            <div class="button-producto center">
+                                <button onclick="location.href='https://tantrica.pe/'">ordenar ahora</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="center">
                     <div class="grid item-producto">
-                        <div class="img-producto center">
-                            <a href="https://tantrica.pe/">
-                                <img src="img/Tantrica.png" alt="Tantrica">
-                            </a>
-                            <span class="precio center">S/.</span>
-                        </div>
-                        <div class="text-producto center">
-                            <p>tántrica</p>
-                        </div>
-                        <div class="description center">
-                            <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
-                        </div>
-                        <div class="button-producto center">
-                            <button onclick="location.href='https://tantrica.pe/'">ordenar ahora</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="center">
-                    <div class="grid item-producto">
-                        <div class="img-producto center">
-                            <a href="producto/qerochela-luna-miel.html">
-                                <img src="img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
-                            </a>
-                            <span class="precio center">S/.</span>
-                        </div>
-                        <div class="text-producto center">
-                            <p>luna de miel</p>
-                        </div>
-                        <div class="description center">
-                            <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
-                        </div>
-                        <div class="button-producto center">
-                            <button onclick="location.href='producto/qerochela-luna-miel.html'">ordenar ahora</button>
+                        <div class="my-item grid gap1-3rem">
+                            <div class="img-producto center">
+                                <a href="producto/qerochela-luna-miel.html">
+                                    <img src="img/inicio-img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
+                                </a>
+                            </div>
+                            <div class="text-producto center">
+                                <p>luna de miel</p>
+                            </div>
+                            <div class="description center">
+                                <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
+                            </div>
+                            <div class="button-producto center">
+                                <button onclick="location.href='producto/qerochela-luna-miel.html'">ordenar ahora</button>
+                            </div>
                         </div>
                     </div>
                 </div>                
@@ -175,7 +176,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="index.html">
-                            <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                            <img src="img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
