--- a/producto/qerochela-luna-miel.html
+++ b/producto/qerochela-luna-miel.html
@@ -59,7 +59,7 @@
         <section class="ver-producto center" id="luna-miel">
             <article class="grid ver-producto-column-2">
                 <div class="producto-img center">
-                    <img src="../img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
+                    <img src="../img/inicio-img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
                 </div>
                 <div class="flex flex-column ver-producto-2">
                     <div class="producto-title">
@@ -98,55 +98,64 @@
                 </div>
             </section>
             <div class="grid productos-column-3 center">
-                <div class="grid item-producto">
-                    <div class="img-producto center">
-                        <a href="qerochela.html">
-                            <img src="../img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
-                        </a>
-                        <span class="precio center">S/.</span>
-                    </div>
-                    <div class="text-producto center">
-                        <p>aborigen</p>
-                    </div>
-                    <div class="description center">
-                        <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
-                    </div>
-                    <div class="button-producto center">
-                        <button onclick="location.href='qerochela.html'">ordenar ahora</button>
-                    </div>
-                </div>
-                <div class="grid item-producto">
-                    <div class="img-producto center">
-                        <a href="https://tantrica.pe/">
-                            <img src="../img/Tantrica.png" alt="Tantrica">
-                        </a>
-                        <span class="precio center">S/.</span>
-                    </div>
-                    <div class="text-producto center">
-                        <p>tántrica</p>
-                    </div>
-                    <div class="description center">
-                        <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
-                    </div>
-                    <div class="button-producto center">
-                        <button onclick="location.href='https://tantrica.pe/'">ordenar ahora</button>
+                <div class="center">
+                    <div class="item-producto">
+                        <div class="my-item grid gap1-3rem">
+                            <div class="img-producto center">
+                                <a href="qerochela.html">
+                                    <img src="../img/inicio-img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
+                                </a>
+                            </div>
+                            <div class="text-producto center">
+                                <p>aborigen</p>
+                            </div>
+                            <div class="description center">
+                                <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
+                            </div>
+                            <div class="button-producto center">
+                                <button onclick="location.href='qerochela.html'">ordenar ahora</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="grid item-producto">
-                    <div class="img-producto center">
-                        <a href="#luna-miel">
-                            <img src="../img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
-                        </a>
-                        <span class="precio center">S/.</span>
+                <div class="center">
+                    <div class="item-producto">
+                        <div class="my-item grid gap1-3rem">
+                            <div class="img-producto center">
+                                <a href="https://tantrica.pe/" target="_blank">
+                                    <img src="../img/inicio-img/Tantrica.png" alt="Tantrica">
+                                </a>
+                            </div>
+                            <div class="text-producto center">
+                                <p>tántrica</p>
+                            </div>
+                            <div class="description center">
+                                <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
+                            </div>
+                            <div class="button-producto center">
+                                <button onclick="location.href='https://tantrica.pe/'">ordenar ahora</button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="text-producto center">
-                        <p>luna de miel</p>
-                    </div>
-                    <div class="description center">
-                        <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
-                    </div>
-                    <div class="button-producto center">
-                        <button onclick="location.href='#luna-miel'">ordenar ahora</button>
+                </div>
+                <div class="center">
+                    <div class="item-producto">
+                        <div class="my-item grid gap1-3rem">
+                            <div class="img-producto center">
+                                <a href="#luna-miel">
+                                    <img src="../img/inicio-img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
+                                </a>
+                            </div>
+                            <div class="text-producto center">
+                                <p>luna de miel</p>
+                            </div>
+                            <div class="description center">
+                                <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
+                            </div>
+                            <div class="button-producto center">
+                                <button onclick="location.href='#luna-miel'">ordenar ahora</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -175,7 +184,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="../index.html">
-                            <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                            <img src="../img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
