--- a/productos.html
+++ b/productos.html
@@ -63,7 +63,7 @@
             <div class="flex flex-column">
                 <div class="center">
                     <a href="producto/qerochela.html">
-                        <img src="img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" class="item-img">
+                        <img src="img/inicio-img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" class="item-img">
                     </a>
                 </div>
                 <div class="producto-info flex flex-column">
@@ -78,7 +78,7 @@
             <div class="flex flex-column">
                 <div class="center">
                     <a href="https://tantrica.pe/">
-                        <img src="img/Tantrica.png" alt="Tántrica" class="item-img">
+                        <img src="img/inicio-img/Tantrica.png" alt="Tántrica" class="item-img">
                     </a>
                 </div>
                 <div class="producto-info flex flex-column">
@@ -93,7 +93,7 @@
             <div class="flex flex-column">
                 <div class="center">
                     <a href="producto/qerochela-luna-miel.html">
-                        <img src="img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel" class="item-img">
+                        <img src="img/inicio-img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel" class="item-img">
                     </a>
                 </div>
                 <div class="producto-info flex flex-column">
@@ -130,7 +130,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="index.html">
-                            <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                            <img src="img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
