--- a/servicios.html
+++ b/servicios.html
@@ -182,7 +182,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="index.html">
-                            <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                            <img src="img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
