--- a/servicios.html
+++ b/servicios.html
@@ -63,7 +63,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-1.jpeg" alt="Asesoría e Implementación de Plantas Cerveceras">
+                        <img src="img/servicios-img/servicio-1.jpg" alt="Asesoría e Implementación de Plantas Cerveceras">
                     </div>
                     <div class="ser-title">
                         <h2>Asesoría e Implementación de Plantas</h2>
