--- a/index.html
+++ b/index.html
@@ -57,24 +57,24 @@
 
     <main class="container" id="qerochela">
         <section class="banner">
-            <img src="img/inicio-img/Banner.jpeg" alt="Banner">
+            <img src="img/inicio-img/Banner.jpg" alt="Banner">
         </section>
         <section class="categorias center">
             <article class="grid cat-column-2">
                 <div class="item-img">
                     <a href="producto/qerochela.html">
-                        <img src="img/inicio-img/Publicidad1.jpeg" alt="Publicidad 1">
+                        <img src="img/inicio-img/Publicidad1.jpg" alt="Publicidad 1">
                     </a>
                 </div>
                 <div class="grid cat-subcolumn-2">
                     <div class="item-img2">
                         <a href="https://tantrica.pe/" target="_blank">
-                            <img src="img/inicio-img/Publicidad2.jpeg" alt="Publicidad 2">
+                            <img src="img/inicio-img/Publicidad2.jpg" alt="Publicidad 2">
                         </a>
                     </div>
                     <div class="item-img2">
                         <a href="producto/qerochela-luna-miel.html">
-                            <img src="img/inicio-img/Publicidad3.jpeg" alt="Publicidad 3">
+                            <img src="img/inicio-img/Publicidad3.jpg" alt="Publicidad 3">
                         </a>
                     </div>
                 </div>
