--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -93,7 +93,7 @@
                     <h2 class="title-section">nuestros productos</h2>
                 </div>
                 <div class="center">
-                    <p class="text-section">Cerveza artesanal con identidad. Sabor que cuenta una historia.</p>
+                    <p class="text-section center-align">Cerveza artesanal con identidad. Sabor que cuenta una historia.</p>
                 </div>
             </section>
             <div class="grid productos-column-3 center">
