--- a/servicios.html
+++ b/servicios.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="ser-text">
                         <p>Hacemos tu cerveza con tu marca o la nuestra.
-                            Incluye producción, embotellado y diseño. Ideal para negocios o eventos.</p>
+                            Incluye producción, embotellado y diseño.</p>
                     </div>
                     <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Maquila%20y%20Marca%20Blanca!" class="center ser-enlace" target="_blank">
                         información
