--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q'ero Chela</title>
+    <link rel="preload" href="css/css.css" as="style">
     <link rel="stylesheet" href="css/css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,24 +58,24 @@
 
     <main class="container" id="qerochela">
         <section class="banner">
-            <img src="img/inicio-img/Banner.jpg" alt="Banner">
+            <img src="img/inicio-img/Banner.png" alt="Banner">
         </section>
         <section class="categorias center">
             <article class="grid cat-column-2">
                 <div class="item-img">
                     <a href="producto/qerochela.html">
-                        <img src="img/inicio-img/Publicidad1.jpg" alt="Publicidad 1">
+                        <img src="img/inicio-img/Publicidad1.avif" alt="Publicidad 1">
                     </a>
                 </div>
                 <div class="grid cat-subcolumn-2">
                     <div class="item-img2">
                         <a href="https://tantrica.pe/" target="_blank">
-                            <img src="img/inicio-img/Publicidad2.jpg" alt="Publicidad 2">
+                            <img src="img/inicio-img/Publicidad2.avif" alt="Publicidad 2">
                         </a>
                     </div>
                     <div class="item-img2">
                         <a href="producto/qerochela-luna-miel.html">
-                            <img src="img/inicio-img/Publicidad3.jpg" alt="Publicidad 3">
+                            <img src="img/inicio-img/Publicidad3.avif" alt="Publicidad 3">
                         </a>
                     </div>
                 </div>
