--- a/producto/qerochela-luna-miel.html
+++ b/producto/qerochela-luna-miel.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luna de Miel - Producto</title>
+    <link rel="preload" href="../css/producto_css.css" as="style">
     <link rel="stylesheet" href="../css/producto_css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
