--- a/taproom.html
+++ b/taproom.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q'ero Chela - Taproom</title>
+    <link rel="preload" href="css/taproom_css.css" as="style">
     <link rel="stylesheet" href="css/taproom_css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
