--- a/servicios.html
+++ b/servicios.html
@@ -148,7 +148,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="../img/servicios-img/servicio-6.jpg" alt="Diseño y Producción de Merchandising">
+                        <img src="img/servicios-img/servicio-6.jpg" alt="Diseño y Producción de Merchandising">
                     </div>
                     <div class="ser-title">
                         <h2>Diseño y Producción de Merchandising</h2>
