--- a/nosotros.html
+++ b/nosotros.html
@@ -186,7 +186,7 @@
                     <div class="medallas center">
                         <img class="img" src="img/nosotros-img/Medalla-Bronce.png" alt="Premio Bronce">
                         <div class="obj-text center">
-                            <h2>medalla de bronces</h2>
+                            <h2>medalla de bronce</h2>
                         </div>
                     </div>
                 </div>
