--- a/taproom.html
+++ b/taproom.html
@@ -13,17 +13,163 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gidole&display=swap" rel="stylesheet">
     <link rel="website Icon" type="png" href="img/Logo-Web.png">
+    <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script>   
 </head>
-<body class="center">
-    <main class="center">
-        <div class="img center">
-            <img src="img/TapRoom-Prox.png" alt="Próximamente Q'ero Chela">
-        </div>
-        <div class="center">
-            <button class="my-button" onclick="location.href='index.html'">
-                volver
-            </button>
+<body>   
+    <header>
+        <nav class="grid column-header">
+            <div class="flex title-logo">
+                <div class="center">
+                    <a href="index.html">
+                        <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                    </a>
+                </div>
+            </div>
+            <div class="flex navegation center-nav">
+                <input type="checkbox" id="burgercheck">
+                <label for="burgercheck" class="burger-icon">
+                    <i class="fa-solid fa-bars"></i>
+                </label>
+                <ul class="flex gap5rem flex-row-2">
+                    <li class="logo-burger">
+                        <a href="index.html">
+                            <div class="flex">
+                                <div class="center logo-burger-img">
+                                    <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                </div>
+                            </div>
+                        </a>
+                    </li>    
+                    <li class="center burger-center">
+                        <a href="productos.html">Productos</a>
+                    </li>
+                    <li class="center burger-center">
+                        <a href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="center burger-center">
+                        <a href="servicios.html">Servicios</a>
+                    </li>
+                    <li class="center burger-center">
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
+                            Contactos
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+
+    <main>
+        <div class="taproom center">
+            <div class="taproom-img">
+            </div>
+            <div class="my-taproom center gappx">
+                <div class="taproom-title center">
+                    <h2>visita el templo q'ero chela</h2>
+                </div>
+                <div class="taproom-text center">
+                    <p class="center-align">Vive el sabor auténtico de nuestra cerveza en un espacio diseñado para compartir, disfrutar y descubrir nuevas sensaciones.</p>
+                </div>
+                <div class="taproom-btn center">
+                    <button>información</button>
+                </div>
+            </div>
         </div>
     </main>
+
+    <footer class="footer center">
+        <div class="my-footer grid footer-column-2 center">
+            <div class="flex footer-flex flex-column">
+                <div class="title-footer center-footer ">
+                    <h2>¿listo para pedir?</h2>
+                </div>
+                <div class="text-footer center-text-footer">
+                    <p>Descubre el sabor perfecto para cada ocasión y vive una experiencia única. ¡Haz tu pedido ahora!</p>
+                </div>
+                <div class="button-footer center-footer">
+                    <button onclick="location.href='https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!'">comprar</button>
+                </div>
+            </div>
+            <div class="img-footer">
+                <img src="img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+            </div>
+        </div>
+        <div class="my-footer2 flex footer-column-2-2">
+            <div class="flex flex-2"> 
+                <div class="flex title-logo">
+                    <div class="center">
+                        <a href="index.html">
+                            <img src="img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
+                        </a>
+                    </div>
+                </div>
+                <div class="flex title-telefono">
+                    <div class="center">
+                        <i class="fa-solid fa-phone center"></i>
+                    </div>
+                    <div class="center">
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!">
+                           +51 935 287 218 
+                        </a>
+                    </div>
+                </div>
+                <div class="flex title-email">
+                    <div class="center">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                    <div class="center">
+                        <a href="mailto:ventas@qerochela.com?Subject=Aquí%20el%20asunto%20del%20mail">
+                            ventas@qerochela.com
+                        </a>
+                    </div>
+                </div>
+                <div class="flex social-media gap-footer">
+                    <a href="https://www.facebook.com/profile.php?id=61573955267865" class="center" target="_blank">
+                        <div class="social social-f center">
+                            <i class="fa-brands fa-facebook"></i>
+                        </div>
+                    </a>
+                    <a href="https://www.instagram.com/qerochela?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="center" target="_blank">
+                        <div class="social social-i center">
+                            <i class="fa-brands fa-instagram"></i>
+                        </div>
+                    </a>
+                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" class="center" target="_blank">
+                        <div class="social social-w center">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="grid footer-column-3 gap-footer-2">
+                <div class="flex flex-2">
+                    <h2>Empresa</h2>
+                    <div class="flex flex-2 gap-footer-3">
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="taproom.html">Taproom</a>
+                    </div>
+                </div>
+                <div class="flex flex-2">
+                    <h2>Productos</h2>
+                    <div class="flex flex-2 gap-footer-3">
+                        <a href="#qerochela">Q'ero Chela</a>
+                        <a href="https://tantrica.pe/" target="_blank">Tantrica</a>
+                    </div>
+                </div>
+                <div class="flex flex-2">
+                    <h2>Servicios</h2>
+                    <div class="flex flex-2 gap-footer-3">
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Asesoría%20e%20Implementación%20de%20Plantas%20Cerveceras!" target="_blank">Asesoría Cervecera</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Instalación%20de%20Barras%20de%20Cerveza!" target="_blank">Instalación de Barras</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cerveza%20para%20Eventos%20en%20Botellas%20o%20Barril!" target="_blank">Cerveza para Eventos</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Maquila%20y%20Marca%20Blanca!" target="_blank">Maquila y Marca Blanca</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cursos%20y%20Capacitaciones!" target="_blank">Cursos Especializados</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Diseño%20y%20Producción%20de%20Merchandising!" target="_blank">Diseño de Merchandising</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
