--- a/taproom.html
+++ b/taproom.html
@@ -60,7 +60,7 @@
     </header>
 
 
-    <main>
+    <main id="taproom">
         <div class="taproom center">
             <div class="taproom-img">
             </div>
@@ -75,6 +75,16 @@
                     <button>información</button>
                 </div>
             </div>
+        </div>
+        <div class="taproom-what flex flex-column center gappx2">
+            <div class="center taproom-what-title">
+                <h2>¿que es un taproom?</h2>
+            </div>
+            <div class="center-align taproom-what-text">
+                <p>Un Taproom es el espacio donde una cervecería artesanal ofrece sus cervezas directamente al público, servidas frescas y recién salidas del barril. Es el lugar ideal para conocer los productos, probar distintas variedades y vivir la experiencia cervecera en su forma más auténtica, rodeado del ambiente y la esencia de la marca.</p>
+            </div>
+        </div>
+        <div class="video-taproom center">
         </div>
     </main>
 
@@ -147,7 +157,7 @@
                     <h2>Empresa</h2>
                     <div class="flex flex-2 gap-footer-3">
                         <a href="nosotros.html">Nosotros</a>
-                        <a href="taproom.html">Taproom</a>
+                        <a href="#taproom">Taproom</a>
                     </div>
                 </div>
                 <div class="flex flex-2">
