update responsive beta taproom

--- a/taproom.html
+++ b/taproom.html
@@ -72,7 +72,7 @@
                     <p class="center-align">Vive el sabor auténtico de nuestra cerveza en un espacio diseñado para compartir, disfrutar y descubrir nuevas sensaciones.</p>
                 </div>
                 <div class="taproom-btn center">
-                    <button>información</button>
+                    <button onclick="location.href='https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20visitar%20el%20Templo%20Qero%20Chela!'">información</button>
                 </div>
             </div>
         </div>
@@ -84,7 +84,17 @@
                 <p>Un Taproom es el espacio donde una cervecería artesanal ofrece sus cervezas directamente al público, servidas frescas y recién salidas del barril. Es el lugar ideal para conocer los productos, probar distintas variedades y vivir la experiencia cervecera en su forma más auténtica, rodeado del ambiente y la esencia de la marca.</p>
             </div>
         </div>
-        <div class="video-taproom center">
+        <div class="video-taproom center flex flex-column">
+            <div class="video-title center">
+                <h2>conoce la experiencia q'ero chela</h2>
+            </div>
+            <div class="cuadro-video center">
+                <div class="cuadro-video-img center">
+                    <a href="https://www.facebook.com/share/r/12LQ4CKydAK/">
+                        <img src="img/taproom-img/boton-Play-Q'eroChela.png" alt="Botón Play Q'ero Chela" class="pulsate-fwd">
+                    </a>
+                </div>
+            </div>
         </div>
     </main>
 
