update ver producto

--- a/producto/qerochela-luna-miel.html
+++ b/producto/qerochela-luna-miel.html
@@ -62,12 +62,12 @@
     <main>
         <section class="ver-producto center" id="luna-miel">
             <article class="grid ver-producto-column-2">
-                <div class="producto-img center">
-                    <img src="../img/inicio-img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
+                <div class="ver-producto-img center">
+                    <img src="../img/inicio-img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel" id="img-change" class="producto-img">
                 </div>
                 <div class="flex flex-column ver-producto-2">
                     <div class="producto-title">
-                        <h2>luna de miel</h2>
+                        <h2 id="h2-t">luna de miel</h2>
                     </div>
                     <div class="producto-text">
                         <p>Es una cerveza artesanal elaborada con miel de origen natural. Cada sorbo te envuelve en una experiencia que combina suavidad y dulzura.</p>
