--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -62,12 +62,12 @@
     <main>
         <section class="ver-producto center" id="aborigen">
             <article class="grid ver-producto-column-2">
-                <div class="producto-img center">
-                    <img src="../img/inicio-img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
+                <div class="ver-producto-img center">
+                    <img src="../img/inicio-img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" id="img-change" class="producto-img">
                 </div>
                 <div class="flex flex-column ver-producto-2">
                     <div class="producto-title">
-                        <h2>aborigen</h2>
+                        <h2 id="h2-t">aborigen</h2>
                     </div>
                     <div class="producto-text">
                         <p>Es una cerveza fácil de beber con un suave dulzor inicial a caramelo y un toque de quedad tostada al final generado por sus 4 diferentes tipos de malta.</p>
