--- a/taproom.html
+++ b/taproom.html
@@ -65,7 +65,7 @@
             <div class="taproom-img">
             </div>
             <div class="my-taproom center gappx">
-                <div class="taproom-title center">
+                <div class="taproom-title center-align">
                     <h2>visita el templo q'ero chela</h2>
                 </div>
                 <div class="taproom-text center">
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="taproom-what flex flex-column center gappx2">
-            <div class="center taproom-what-title">
+            <div class="center-align taproom-what-title">
                 <h2>¿que es un taproom?</h2>
             </div>
             <div class="center-align taproom-what-text">
@@ -85,12 +85,12 @@
             </div>
         </div>
         <div class="video-taproom center flex flex-column">
-            <div class="video-title center">
+            <div class="video-title center-align">
                 <h2>conoce la experiencia q'ero chela</h2>
             </div>
             <div class="cuadro-video center">
                 <div class="cuadro-video-img center">
-                    <a href="https://www.facebook.com/share/r/12LQ4CKydAK/">
+                    <a href="https://web.facebook.com/share/r/19FCsCZmnX/">
                         <img src="img/taproom-img/boton-Play-Q'eroChela.png" alt="Botón Play Q'ero Chela" class="pulsate-fwd">
                     </a>
                 </div>
