--- a/taproom.html
+++ b/taproom.html
@@ -86,7 +86,7 @@
         </div>
         <div class="video-taproom center flex flex-column">
             <div class="video-title center-align">
-                <h2>conoce la experiencia q'ero chela</h2>
+                <h2>q'ero chela te espera</h2>
             </div>
             <div class="cuadro-video center">
                 <div class="cuadro-video-img center">
